MAINT: A few minor edits made to the media queries and ensure the styles match both stylesheets so that there is smooth transition between light and dark modes when the user presses the toggle.

--- a/assets/css/style-dark.css
+++ b/assets/css/style-dark.css
@@ -11,7 +11,7 @@ body {
     background-color: #2f1818;
     color: #e6b145;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .game-title {
@@ -77,7 +77,7 @@ body {
 .user-pic {
     text-align: center;
     width: 100%;
-    height: 80px;
+    height: 100%;
 }
 
 .user-pic img {
@@ -189,6 +189,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_buttons_animate3 *
     width: 100%;
     height: 50px;
     margin-top: 15px;
+    margin-bottom: 20px;
     border-radius: 10px;
 }
 
@@ -275,7 +276,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_buttons_animate3 *
     background-size: cover;
     background-attachment: fixed;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .game-cards-container {
@@ -286,6 +287,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_buttons_animate3 *
     justify-content: center;
     align-items: center;
     perspective: 500px;
+    height: 100%;
 }
 
 .game-info-container {
@@ -294,7 +296,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_buttons_animate3 *
     display: flex;
     justify-content: space-between;
     padding: 0px 50px;
-    margin: 10px 50px 0px;
+    margin: 10px 0px 0px;
     border-radius: 10px;
 }
 
@@ -376,13 +378,12 @@ transition: transform 500ms ease-in-out;
     }
 
     .game-country {
-        width: 50%;
-        margin: 0% 25% 2%;
+        width: 100%;
         font-size: 2em;
     }
 
-    .game-board {
-        height: 100vh;
+    #user-country-pic {
+        height: 60px;
     }
 
     .game-cards-container {
@@ -403,15 +404,51 @@ transition: transform 500ms ease-in-out;
     }
 }
 
-@media (min-width: 414px) and (max-width: 533px) {
+/* ----------------------------------------------------------------- Media Queries */
+
+@media screen and (min-width: 321px) and (max-width: 414px) {
+
+    .game-title {
+        font-size: 2em;
+    }
+
+    .game-country {
+        width: 100%;
+        font-size: 2em;
+    }
+
+    .game-cards-container {
+        grid-template-columns: repeat(3, auto);
+        grid-gap: 10px;
+    }
+
+    .game-info-container {
+        align-items: center;
+        margin: 10px 0px 0px;
+        padding: 0px 10px;
+        font-size: 80%;
+    }
+
+    .card {
+        width: 80px;
+        height: 85px;
+    }
+}
+
+@media screen and (min-width: 415px) and (max-width: 533px) {
     .card {
         width: 95px;
         height: 100px;
     }
+
+    .game-cards-container {
+        grid-template-columns: repeat(3, auto);
+        grid-gap: 10px;
+    }
 }
 
 
-@media (min-width: 534px) and (max-width: 868px) {
+@media screen and (min-width: 534px) and (max-width: 810px) {
     .game-title {
         font-size: 3em;
     }
@@ -427,7 +464,7 @@ transition: transform 500ms ease-in-out;
     }
 }
 
-@media (min-width: 869px) and (max-width: 1000px) {
+@media screen and (min-width: 811px) and (max-width: 1000px) {
     .game-title {
         font-size: 3.5em;
     }
@@ -440,12 +477,6 @@ transition: transform 500ms ease-in-out;
     .level-container button {
         padding: 5px 15px;
         margin: 8px 5px 15px;
-    }
-}
-
-@media (min-width: 1001px) and (max-width: 1065px) {
-    .game-title {
-        font-size: 4em;
     }
 }
 
